@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Nov 2011; evadim <evadim@evadim.ru> elementary-9999.ebuild, metadata.xml:
+  new use: webkit
+
   29 Jan 2011; evadim <evadim@evadim.ru> elementary-9999.ebuild:
   moved from TMP to /
 
